--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/cambiar-contrasena-persona/cambiar-contrasena-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/cambiar-contrasena-persona/cambiar-contrasena-persona.component.html
@@ -29,7 +29,7 @@
         </div>
     
         <div class="align-right">
-          <a href="#">Recuperar contraseña</a>
+          <a href="/recuperar-contrasena-persona?id_aplicacion={{ id_aplicacion }}">Recuperar contraseña</a>
         </div>
         
         <div>
