--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
@@ -34,7 +34,7 @@
   
         <div class="footer">
           <p>¿No tienes una cuenta de empresa?</p>  
-          <a href="#">Crea una ahora</a>
+          <a href="/registro-empresa?id_aplicacion={{ id_aplicacion }}">Crea una ahora</a>
         </div>
         </div> 
         
