--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-empresa/registro-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-empresa/registro-empresa.component.html
@@ -199,7 +199,7 @@
   
       <div class="footer">
         <p>¿Ya tienes una cuenta?</p>  
-        <a href="#">Ingresa aquí</a>
+        <a href="/sesion-empresa?id_aplicacion={{ id_aplicacion }}">Ingresa aquí</a>
       </div>
       
       </form>
