--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.html
@@ -154,7 +154,7 @@
       </div>
       <div class="footer">
         <p>¿Ya tienes una cuenta?</p>  
-        <a href="#">Ingresa aquí</a>
+        <a href="/sesion-persona?id_aplicacion={{ id_aplicacion }}">Ingresa aquí</a>
       </div>
     </div>
   </div>
