--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-persona/sesion-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-persona/sesion-persona.component.html
@@ -33,7 +33,7 @@
     
 
         <div class="align-right">
-          <a href="#">Recuperar contraseña</a>
+          <a href="/recuperar-contrasena-persona?id_aplicacion={{ id_aplicacion }}">Recuperar contraseña</a>
         </div>
         
         <div>
@@ -43,7 +43,7 @@
   
         <div class="footer">
           <p>¿No tienes una cuenta de persona?</p>  
-          <a href="#">Crea una ahora</a>
+          <a href="/registro-persona?id_aplicacion={{ id_aplicacion }}">Crea una ahora</a>
         </div>
   
       </form>
