--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/recuperar-contrasena-persona/recuperar-contrasena-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/recuperar-contrasena-persona/recuperar-contrasena-persona.component.html
@@ -38,7 +38,7 @@
 
       <div class="footer">
         <p>¿No tienes una cuenta de persona?</p>  
-        <a href="#">Crea una ahora</a>
+        <a href="/registro-persona?id_aplicacion={{ id_aplicacion }}">Crea una ahora</a>
       </div>
         </div>             
           
