--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="align-right">
-          <a href="#">Recuperar contraseña</a>
+          <a href="/recuperar-contrasena-empresa?id_aplicacion={{ id_aplicacion }}">Recuperar contraseña</a>
         </div>
         
         <div>
@@ -48,7 +48,7 @@
   
         <div class="footer">
           <p>¿No tienes una cuenta de empresa?</p>  
-          <a href="#">Crea una ahora</a>
+          <a href="/registro-empresa?id_aplicacion={{ id_aplicacion }}">Crea una ahora</a>
         </div>
   
       </form>
