--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
@@ -12,7 +12,7 @@
           <!--<img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">-->
         </div>
         <div class="title" *ngIf="!validaSuccess">
-          <h3>Recuperar contraseña</h3>
+          <h2 align="center">Recuperar contraseña</h2>
           <p>Persona Jurídica</p>
         </div>         
       </header>  
