--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.html
@@ -11,7 +11,7 @@
           <img [src]="urlArchivo" alt="archivo"  width="138">
           <!--<img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">-->
         </div>
-          <h3>Inicio de Sesión</h3>
+          <h2 align="center" >Inicio de Sesión</h2>
           <p>Persona Jurídica</p>
     </header>
 
