--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-persona/sesion-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-persona/sesion-persona.component.css
@@ -163,7 +163,7 @@ a:hover {
 }
 
 .login__header :last-child {
-  margin-bottom: 0;
+  margin-bottom: 10px;
 }
 
 .login h2 .icon {
@@ -199,6 +199,7 @@ a:hover {
   box-sizing: border-box;
   font-size: 12px;
   margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 .login .input-wrapper {
@@ -217,7 +218,7 @@ a:hover {
   width: 20px;
   height: 20px;
   left: 12px;
-  top: 66%;
+  top: 65%;
   transform: translateY(-50%);
 }
 
@@ -285,6 +286,7 @@ a:hover {
 .logo-aplicacion, h1, p {
   text-align: center;
   margin-top: 4px;
+  margin-bottom: 4px;
 
 } 
 
@@ -311,7 +313,7 @@ a:hover {
 .align-right {
   text-align: right;
   margin-bottom: 12px;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 
