--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-persona/sesion-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-persona/sesion-persona.component.html
@@ -11,7 +11,7 @@
         <img [src]="urlArchivo" alt="archivo"  width="138">
          <!-- <img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo"> -->
        </div>
-          <h3>Inicio de Sesión</h3>
+          <h2 align="center" >Inicio de Sesión</h2>
           <p>Persona Natural</p>
     </header>
 
@@ -37,8 +37,7 @@
         </div>
         
         <div>
-          <button class="buttonSiguiente" (click)="iniciarSesionPersonaNatural()">Ingresar</button>  
-          <button class="buttonSiguiente" (click)="fnCargarAplicacion()">inf</button>    
+          <button class="buttonSiguiente" (click)="iniciarSesionPersonaNatural()">Ingresar</button>   
         </div>
   
         <div class="footer">
