--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
@@ -12,7 +12,7 @@
             <img [src]="urlArchivo" alt="archivo"  width="138">
             <!--<img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">-->
           </div>
-          <h3>Cambiar contraseña</h3>
+          <h2 align="center">Cambiar contraseña</h2>
           <p>Persona Jurídica</p>
        </header>
     </div>
