--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/recuperar-contrasena-persona/recuperar-contrasena-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/recuperar-contrasena-persona/recuperar-contrasena-persona.component.css
@@ -175,9 +175,6 @@ a:hover {
 }
 
 
-.login__header :first-child {
-  margin-top: 0;
-}
 .login__header {
   background-color: #fff;
   color: #000;
@@ -207,7 +204,7 @@ a:hover {
 }
 
 .login__header :last-child {
-  margin-bottom: 0;
+  margin-bottom: 10px;
 }
 
 
@@ -222,7 +219,7 @@ a:hover {
   color: #777;
   display: grid;
   gap: 0.5em;
-  padding: 0.8em 1.6em 1.3em 1.6em;
+  padding: 0.5em 1.6em 1.3em 1.6em;
   
 }
 
@@ -241,7 +238,8 @@ a:hover {
   border-radius: 1px;
   box-sizing: border-box;
   font-size: 12px;
-  margin-bottom: 5px;
+  margin-bottom: 7px;
+  margin-top: 5px;
 }
 
 .login .input-wrapper {
@@ -260,9 +258,10 @@ a:hover {
   width: 20px;
   height: 20px;
   left: 12px;
-  top: 66%;
+  top: 65%;
   transform: translateY(-50%);
 }
+
 
 .login .input-icon.password {
   left: unset;
@@ -328,8 +327,9 @@ a:hover {
 .logo-aplicacion, h1, p {
   text-align: center;
   margin-top: 4px;
+  margin-bottom: 4px;
+}
 
-} 
 .column {
   display: flex;
   flex-direction: row;
@@ -343,7 +343,7 @@ a:hover {
 }
 .center {
   text-align: center;
-  margin-bottom: 12px;
+  margin-bottom: 5px;
 }
 
 .disabled {
