--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.html
@@ -11,7 +11,7 @@
           <img [src]="urlArchivo" alt="archivo"  width="138">
           <!--<img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">-->
         </div>
-          <h3>REGISTRATE</h3>
+          <h2 align="center" >REGISTRATE</h2>
           <p>Persona Natural</p>      
           <div class="center">
             <button class="buttonPaso" (click)="clickPaso1()" >1</button>
