--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-persona/edicion-perfil-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-persona/edicion-perfil-persona.component.html
@@ -11,8 +11,8 @@
         </div> 
       </div>        
       <div class="title" >
-        <h3>Mi perfil</h3>
-        <p>Persona Natural</p>    
+        <h2>Mi perfil</h2>
+        <h3>Persona Natural</h3> 
     </div>
   </div>
        <div class="personal" *ngIf="isVisiblePerfil">
