--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-persona/sesion-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-persona/sesion-persona.component.html
@@ -12,7 +12,7 @@
          <!-- <img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo"> -->
        </div>
           <h2 align="center" >Inicio de Sesión</h2>
-          <p>Persona Natural</p>
+          <h3 align="center" >Persona Natural</h3> 
     </header>
 
       <form class="login__form">      
