--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.css
@@ -143,11 +143,8 @@
   }
   
   .login__header h3 {
-    text-align: center;
-    margin-top: 10px;
+    margin-top: 0%;
     margin-bottom: 0%;
-    font-size: 22px;
-    font-weight: 600;
   }
   
   
