--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.css
@@ -142,12 +142,10 @@ a:hover {
 }
 
 .login__header h3 {
-  text-align: center;
-  margin-top: 10px;
+  margin-top: 0%;
   margin-bottom: 0%;
-  font-size: 22px;
-  font-weight: 600;
 }
+
 
 .login__header p {
   text-align: center;
