--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-persona/edicion-perfil-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-persona/edicion-perfil-persona.component.css
@@ -80,9 +80,6 @@ a:hover {
   padding: 1.7em 2em 1.3em 2em;
 }
 
-.form :last-child {
-  margin-bottom: 0;
-}
 
 .form h2 .icon {
   margin-right: 14px;
@@ -162,7 +159,7 @@ a:hover {
 
  
 .form .contacto img{
-  margin-left: 170px;
+  margin-left: 196px;
  }
 
 
@@ -196,7 +193,8 @@ color: #000;
   border-radius: 1px;
   box-sizing: border-box;
   font-size: 12px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  margin-top: 5px;
 }
 
 .form .input-wrapper {
@@ -243,7 +241,7 @@ color: #000;
 
 
 .form select {
-  padding: 5px 7px;
+  padding: 6px 7px;
   width: 80%;
   font-size: 12px;
   border: 1px solid #ccc;
@@ -252,7 +250,9 @@ color: #000;
   margin-bottom: 5px;
 }
 
-
+.form select option { 
+  color:#000; 
+}
 
 .form input[type="submit"] {
   display: block;
@@ -280,12 +280,12 @@ color: #000;
 
 .left {
   width: 50%;
-  margin-top: 5px;
+  margin-top: 0px;
   
 }
 .right {
   width: 50%;
-  margin-top: 5px;
+  margin-top: 0px;
 }
 
 .center {
@@ -517,37 +517,37 @@ background-color: #000;
 }
 
 .form .header .circle .circleEditar {
-  width: 40px;
-  height: 40px;
+  width: 38px;
+  height: 38px;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
   background: #eee;
-  margin: 90px 99px;
+  margin: 76px 80px;
   border: 1px solid #ccc;
-  padding: 6px 12px 10px 12px;
-  
+  padding: 8px 5px 10px 8px;
+
+}
+
+.form .editar {
+  background: #eee;
+  width: 360px;
+  height: 340px;
+  padding: 10px 0px 10px 0px;
+  margin-top: 20px;
 }
 
 .form .editar .circle {
-width: 345px;
-height: 280px;
-background: #ccc;
-margin: 20px 0px 20px 0px;
-border: 1px solid #ccc;
+  width: 320px;
+  height: 300px;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  background: #ccc;
+  margin: 10px 0px 0px 20px;
+  border: 1px solid #ccc;
 }
 
-.form .editar .circle .circleEditar {
-width: 260px;
-height: 260px;
--moz-border-radius: 50%;
--webkit-border-radius: 50%;
-border-radius: 50%;
-background: #eee;
-margin: 10px 0px 0px 40px;
-border: 1px solid #ccc;
-
-}
 .title {
   width: 50%;
   padding: 25px 10px 10px 25px;
