--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
@@ -1,11 +1,11 @@
 <body class="align">
     <div class="login">
-    <div class="login__header">
+    <div class="login__administracion" *ngIf="isVisiblePrincipal">
      <div class="col-md-12"> 
      <h2 >Administrador de usuarios</h2>
     </div><br><br><br>
   <div class="col-md-2">
-    <button class="buttonSiguiente" >Agregar</button>    
+    <button class="buttonSiguiente" (click)="BtnAgregarUsuario()" >Agregar</button>    
   </div> <br><br><br>
   <div class="col-md-12">
     <div align="left">
@@ -13,7 +13,7 @@
     </div>
   </div>
 </div>
-<div class="login__form" >     
+<div class="login__form" *ngIf="isVisiblePrincipal" >     
   <div class="col-md-12">
     <table class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -36,22 +36,113 @@
                 <td class="table-detalle"></td>
                 <td class="table-detalle"></td>
                 <td class="table-detalle">
-                    <a  class="btn btn-link btn-icon"  data-tooltip="tooltip" data-placement="bottom" title="Editar"><i class="fa fa-pencil"></i></a>
+                    <a  class="btn btn-link btn-icon"  data-tooltip="tooltip" data-placement="bottom" title="Editar" (click)="BtnEditarUsuario()"><i class="fa fa-pencil"></i></a>
                 </td>
             </tr>
         </tbody>
     </table>
 </div>
 </div>
-<div class="login__header">
+
+<!--Editar Usuario-->
+<div class="login__administracion" *ngIf="isVisibleEditarUsuario">
+  <div class="col-md-10"> 
+  <h2 >Usuario</h2>
+ </div>
+<div class="col-md-2 align-right">
+ <a  href="#">Eliminar cuenta</a>    
+</div>
+<div class="col-md-12">
+<div class="cont-usuario"> </div>
+</div>
+<div class="col-md-12 personal">
+  <p>Información</p>
+</div>
+
+<div class="col-md-6" ><br>
+  <label for="dni">DNI</label>
+          <input type="text" id="dni" name="dni"  placeholder="Ej.:15234687"  maxlength="8">
+          <p class="validador" >Debe ingresar el DNI.</p>  
+</div>
+<div class="col-md-6" ><br>
+  <label for="celular">Celular</label>
+  <input type="text" id="celular" name="celular" placeholder="Ej.:999123045"   maxlength="9">
+  <p class="validador">Debe ingresar el celular.</p>
+  <p class="validador">El celular debe contener 9 digitos</p>
+</div>
+<div class="col-md-6" ><br>
+  <label for="correo">Correo</label>
+  <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com"   maxlength="150" >
+     <p class="validador" >Debe ingresar el correo.</p>
+     <p class="validador" >Correo inválido.</p> 
+</div>
+<div class="col-md-6" ><br><br>
+  <div class="col-sm-10">
+    <label>Usuario Activo</label>
+  </div>
+<div class="col-sm-2">
+  <label class="switch">
+    <input type="checkbox">
+    <span class="slider round"></span>
+  </label>
+</div>
+</div>
+<div class="col-sm-6">
+  <button class="buttonSiguiente">Guardar cambios</button> 
+  <button class="buttonCancelar" (click)="BtnCancelarContacto()" >Cancelar</button>  
+</div>
+</div>
+
+<!--Usuario Nuevo-->
+<div class="login__administracion" *ngIf="isVisibleAgregarUsuario">
     <div class="col-md-10"> 
-    <h2 >Usuario</h2>
+    <h2 >Usuario Nuevo</h2>
    </div>
- <div class="col-md-2" align="right">
+ <div class="col-md-2 align-right">
    <a  href="#">Eliminar cuenta</a>    
  </div>
- <div class="col-md-12">
-  <div class="cont-usuario"> </div>
+  <div class="col-md-6" ><br>
+    <label for="dni">DNI</label>
+            <input type="text" id="dni" name="dni"  placeholder="Ej.:15234687"  maxlength="8">
+            <p class="validador" >Debe ingresar el DNI.</p>  
+  </div>
+  <div class="col-md-6" ><br>
+    <label for="correo">Correo</label>
+    <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com"   maxlength="150" >
+       <p class="validador" >Debe ingresar el correo.</p>
+       <p class="validador" >Correo inválido.</p> 
+  </div>
+  <div class="col-md-6" ><br>
+    <label for="nombres">Nombres</label>
+    <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila"  maxlength="150" disabled>
+    <p class="validador" >Debe ingresar los nombres.</p>
+  </div>
+  <div class="col-md-6" ><br>
+    <label for="celular">Celular</label>
+    <input type="text" id="celular" name="celular" placeholder="Ej.:999123045"   maxlength="9">
+    <p class="validador">Debe ingresar el celular.</p>
+    <p class="validador">El celular debe contener 9 digitos</p>
+  </div>
+  <div class="col-md-6" ><br>
+    <label for="apellidos">Apellidos</label>
+    <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez"  maxlength="150" disabled>
+    <p  class="validador" >Debe ingresar los apellidos.</p>
+  </div>
+
+  <div class="col-md-6" ><br><br>
+    <div class="col-sm-10">
+      <label>Usuario Activo</label>
+    </div>
+  <div class="col-sm-2">
+    <label class="switch">
+      <input type="checkbox">
+      <span class="slider round"></span>
+    </label>
+  </div>
+  </div>
+  <div class="col-sm-6">
+    <button class="buttonSiguiente" >Enviar invitación</button>  
+    <button class="buttonCancelar" (click)="BtnCancelarContacto()" >Cancelar</button>   
   </div>
 </div>
 </div>
