--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-empresa/registro-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-empresa/registro-empresa.component.css
@@ -278,6 +278,9 @@ a:hover {
   margin-top: 5px;
 }
 
+.form select option { 
+  color:#000; 
+}
 
 .login select:required {
   border: 1px solid #EB1E23;
