--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.css
@@ -254,7 +254,9 @@
     margin-top: 5px;
   }
 
-
+  .form select option { 
+    color:#000; 
+  }
   
   .login input[type="submit"] {
     display: block;
