--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
@@ -46,12 +46,12 @@
 
 <!--Editar Usuario-->
 <div class="login__administracion" *ngIf="isVisibleEditarUsuario">
-  <div class="col-md-10"> 
+  <div class="col-md-10">
   <h2 >Usuario</h2>
  </div>
 <div class="col-md-2 align-right">
  <a  href="#">Eliminar cuenta</a>    
-</div>
+</div><br><br><br>
 <div class="col-md-12">
 <div class="cont-usuario"> </div>
 </div>
@@ -59,24 +59,28 @@
   <p>Información</p>
 </div>
 
-<div class="col-md-6" ><br>
-  <label for="dni">DNI</label>
-          <input type="text" id="dni" name="dni"  placeholder="Ej.:15234687"  maxlength="8">
-          <p class="validador" >Debe ingresar el DNI.</p>  
+<div class="col-md-6" >
+  <div>
+        <label for="dni">DNI</label>
+          <input type="text" id="dni" name="dni"  placeholder="Ej.:15234687"  [(ngModel)]="numeroDocEditar" (change)="changeNroDocumentoEditar($event)"  maxlength="8">
+          <p class="validador"  *ngIf="validadorNroDocumentoEditar">Debe ingresar el DNI.</p>  
+  </div>
+  <div>
+    <label for="correo">Correo</label>
+    <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com"  [(ngModel)]="correoEditar" (change)="changeCorreoEditar($event)" maxlength="150" >
+      <p class="validador" *ngIf="validadorCorreoEditar">Debe ingresar el correo.</p>
+      <p class="validador" *ngIf="validadorCorreoInvalidoEditar">Correo inválido.</p>  
+  </div>
 </div>
-<div class="col-md-6" ><br>
-  <label for="celular">Celular</label>
-  <input type="text" id="celular" name="celular" placeholder="Ej.:999123045"   maxlength="9">
-  <p class="validador">Debe ingresar el celular.</p>
-  <p class="validador">El celular debe contener 9 digitos</p>
-</div>
-<div class="col-md-6" ><br>
-  <label for="correo">Correo</label>
-  <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com"   maxlength="150" >
-     <p class="validador" >Debe ingresar el correo.</p>
-     <p class="validador" >Correo inválido.</p> 
-</div>
-<div class="col-md-6" ><br><br>
+
+<div class="col-md-6">
+  <div>
+    <label for="celular">Celular</label>
+    <input type="text" id="celular" name="celular" placeholder="Ej.:999123045"  [(ngModel)]="celularEditar"  (change)="changeCelularEditar($event)" maxlength="9" >
+    <p class="validador" *ngIf="validadorCelularEditar">Debe ingresar el celular.</p>
+    <p class="validador" *ngIf="validadorCelularLengthEditar">El celular debe contener 9 digitos</p>
+  </div>
+<div><br>
   <div class="col-sm-10">
     <label>Usuario Activo</label>
   </div>
@@ -87,7 +91,9 @@
   </label>
 </div>
 </div>
-<div class="col-sm-6">
+</div>
+
+<div class="col-md-12">
   <button class="buttonSiguiente">Guardar cambios</button> 
   <button class="buttonCancelar" (click)="BtnCancelarContacto()" >Cancelar</button>  
 </div>
@@ -95,41 +101,44 @@
 
 <!--Usuario Nuevo-->
 <div class="login__administracion" *ngIf="isVisibleAgregarUsuario">
-    <div class="col-md-10"> 
+    <div class="col-md-10">
     <h2 >Usuario Nuevo</h2>
    </div>
  <div class="col-md-2 align-right">
    <a  href="#">Eliminar cuenta</a>    
- </div>
-  <div class="col-md-6" ><br>
+ </div><br><br><br>
+  <div class="col-md-6" >
+    <div>
     <label for="dni">DNI</label>
-            <input type="text" id="dni" name="dni"  placeholder="Ej.:15234687"  maxlength="8">
-            <p class="validador" >Debe ingresar el DNI.</p>  
-  </div>
-  <div class="col-md-6" ><br>
-    <label for="correo">Correo</label>
-    <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com"   maxlength="150" >
-       <p class="validador" >Debe ingresar el correo.</p>
-       <p class="validador" >Correo inválido.</p> 
-  </div>
-  <div class="col-md-6" ><br>
-    <label for="nombres">Nombres</label>
-    <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila"  maxlength="150" disabled>
-    <p class="validador" >Debe ingresar los nombres.</p>
-  </div>
-  <div class="col-md-6" ><br>
-    <label for="celular">Celular</label>
-    <input type="text" id="celular" name="celular" placeholder="Ej.:999123045"   maxlength="9">
-    <p class="validador">Debe ingresar el celular.</p>
-    <p class="validador">El celular debe contener 9 digitos</p>
-  </div>
-  <div class="col-md-6" ><br>
-    <label for="apellidos">Apellidos</label>
-    <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez"  maxlength="150" disabled>
-    <p  class="validador" >Debe ingresar los apellidos.</p>
+    <input type="text" id="dni" name="dni"  placeholder="Ej.:15234687"   [(ngModel)]="numeroDocNew"  (change)="changeNroDocumentoNew($event)" maxlength="8">
+    <p class="validador"  *ngIf="validadorNroDocumentoNew">Debe ingresar el DNI.</p>  
+    </div>
+    <div>
+      <label for="nombres">Nombres</label>
+      <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila"  [(ngModel)]="nombresNew" (change)="changeNombresNew($event)" maxlength="150" disabled>
+      <p class="validador" *ngIf="validadorNombresNew">Debe ingresar los nombres.</p>
+    </div>
+    <div>
+      <label for="apellidos">Apellidos</label>
+      <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez"  [(ngModel)]="apellidosNew" (change)="changeApellidosNew($event)" maxlength="150" disabled>
+      <p  class="validador" *ngIf="validadorApellidosNew">Debe ingresar los apellidos.</p>
+    </div>
   </div>
 
-  <div class="col-md-6" ><br><br>
+  <div class="col-md-6" >
+  <div>
+    <label for="correo">Correo</label>
+    <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com"  [(ngModel)]="correoNew"  (change)="changeCorreoNew($event)"  maxlength="150" >
+    <p class="validador" *ngIf="validadorCorreoNew">Debe ingresar el correo.</p>
+    <p class="validador" *ngIf="validadorCorreoInvalidoNew">Correo inválido.</p> 
+    </div>
+  <div>
+    <label for="celular">Celular</label>
+    <input type="text" id="celular" name="celular" placeholder="Ej.:999123045" [(ngModel)]="celularNew"  (change)="changeCelularNew($event)" maxlength="9">
+    <p class="validador" *ngIf="validadorCelularNew">Debe ingresar el celular.</p>
+    <p class="validador" *ngIf="validadorCelularLengthNew">El celular debe contener 9 digitos</p>
+  </div>
+  <div><br>
     <div class="col-sm-10">
       <label>Usuario Activo</label>
     </div>
@@ -140,7 +149,9 @@
     </label>
   </div>
   </div>
-  <div class="col-sm-6">
+</div>
+
+  <div class="col-sm-12">
     <button class="buttonSiguiente" >Enviar invitación</button>  
     <button class="buttonCancelar" (click)="BtnCancelarContacto()" >Cancelar</button>   
   </div>
