--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
@@ -62,7 +62,7 @@
 <div class="col-md-6" >
   <div>
         <label for="dni">DNI</label>
-          <input type="text" id="dni" name="dni"  placeholder="Ej.:15234687"  [(ngModel)]="numeroDocEditar" (change)="changeNroDocumentoEditar($event)"  maxlength="8">
+          <input type="text" id="dni" name="dni"  placeholder="Ej.:15234687"  [(ngModel)]="numeroDocEditar" (change)="changeNroDocumentoEditar($event)" (keypress)="restrictNumeric($event)"  maxlength="8">
           <p class="validador"  *ngIf="validadorNroDocumentoEditar">Debe ingresar el DNI.</p>  
   </div>
   <div>
@@ -76,7 +76,7 @@
 <div class="col-md-6">
   <div>
     <label for="celular">Celular</label>
-    <input type="text" id="celular" name="celular" placeholder="Ej.:999123045"  [(ngModel)]="celularEditar"  (change)="changeCelularEditar($event)" maxlength="9" >
+    <input type="text" id="celular" name="celular" placeholder="Ej.:999123045"  [(ngModel)]="celularEditar"  (change)="changeCelularEditar($event)" (keypress)="restrictNumeric($event)" maxlength="9" >
     <p class="validador" *ngIf="validadorCelularEditar">Debe ingresar el celular.</p>
     <p class="validador" *ngIf="validadorCelularLengthEditar">El celular debe contener 9 digitos</p>
   </div>
@@ -110,7 +110,7 @@
   <div class="col-md-6" >
     <div>
     <label for="dni">DNI</label>
-    <input type="text" id="dni" name="dni"  placeholder="Ej.:15234687"   [(ngModel)]="numeroDocNew"  (change)="changeNroDocumentoNew($event)" maxlength="8">
+    <input type="text" id="dni" name="dni"  placeholder="Ej.:15234687"   [(ngModel)]="numeroDocNew"  (change)="changeNroDocumentoNew($event)" maxlength="8" (keypress)="restrictNumeric($event)" (blur)="btnBuscarDNI()" >
     <p class="validador"  *ngIf="validadorNroDocumentoNew">Debe ingresar el DNI.</p>  
     </div>
     <div>
@@ -134,7 +134,7 @@
     </div>
   <div>
     <label for="celular">Celular</label>
-    <input type="text" id="celular" name="celular" placeholder="Ej.:999123045" [(ngModel)]="celularNew"  (change)="changeCelularNew($event)" maxlength="9">
+    <input type="text" id="celular" name="celular" placeholder="Ej.:999123045" [(ngModel)]="celularNew"  (change)="changeCelularNew($event)" (keypress)="restrictNumeric($event)" maxlength="9">
     <p class="validador" *ngIf="validadorCelularNew">Debe ingresar el celular.</p>
     <p class="validador" *ngIf="validadorCelularLengthNew">El celular debe contener 9 digitos</p>
   </div>
