--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
@@ -95,7 +95,7 @@
 
 <div class="col-md-12">
   <button class="buttonSiguiente">Guardar cambios</button> 
-  <button class="buttonCancelar" (click)="BtnCancelarContacto()" >Cancelar</button>  
+  <button class="buttonCancelar" (click)="BtnCancelar()" >Cancelar</button>  
 </div>
 </div>
 
@@ -153,7 +153,7 @@
 
   <div class="col-sm-12">
     <button class="buttonSiguiente" >Enviar invitación</button>  
-    <button class="buttonCancelar" (click)="BtnCancelarContacto()" >Cancelar</button>   
+    <button class="buttonCancelar" (click)="BtnCancelar()" >Cancelar</button>   
   </div>
 </div>
 </div>
