--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-persona/registro-persona.component.html
@@ -71,7 +71,9 @@
     
           <div>
             <button class="buttonSiguiente" (click)="clickPaso2()">Siguiente</button>
-            <button class="buttonCancelar">Cancelar</button>
+            <a href="/sesion-persona?id_aplicacion={{ id_aplicacion }}">
+              <button class="buttonCancelar">Cancelar</button>
+            </a>         
           </div>
       </div>
       <div *ngIf="isVisiblePaso2">
