--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-empresa/registro-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/registro-empresa/registro-empresa.component.html
@@ -45,7 +45,9 @@
 
       <div>
         <button class="buttonSiguiente" (click)="clickPaso2()">Siguiente</button>
-        <button class="buttonCancelar">Cancelar</button>
+        <a href="/sesion-empresa?id_aplicacion={{ id_aplicacion }}">
+          <button class="buttonCancelar">Cancelar</button>
+        </a>  
       </div>
 
     </div>
