--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
@@ -149,8 +149,8 @@
 </div>
 
   <div class="col-sm-12">
-    <button class="buttonSiguiente" >Enviar invitación</button>  
-    <button class="buttonCancelar" (click)="BtnCancelar()" >Cancelar</button>   
+    <button class="buttonSiguiente" (click)="registroEmpresaService()" >Enviar invitación</button>  
+    <button class="buttonCancelar"  (click)="BtnCancelar()" >Cancelar</button>   
   </div>
 </div>
 </div>
