--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/aplicaciones-usuario/aplicaciones-usuario.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/aplicaciones-usuario/aplicaciones-usuario.component.html
@@ -11,16 +11,13 @@
             <span class="categoria">{{app.nombre_categoria}}</span>
             <div class="box-app-content">
                 <div class="img">
-                    <!-- <img src="assets/img/Logo/{{app.id_aplicacion}}.png" err-src="assets/img/Logo/logo_Temp.png"> -->
-                    <!-- <img src="assets/img/Logo/{{app.id_aplicacion}}.png" on-error-src="assets/img/Logo/logo_Temp.png"> -->
-                    <!-- <img src="assets/img/Logo/logo_Temp.png"> -->
                     <img [src]="app.urlArchivo" alt="archivo">
                 </div>
                 <span class="nombre">{{app.nombre}}</span>
                 <span class="descripcion">{{app.descripcion}}</span>
             </div>
             <div class="box-view">
-              <a [attr.href]="app.url" target="_blank" rel="tooltip"data-placement="bottom" title="Ir a aplicación">
+              <a [attr.href]="app.url" target="" rel="tooltip"data-placement="bottom" title="Ir a aplicación">
                 Ver Aplicación <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
               </a>
             </div>
