--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.css
@@ -113,6 +113,10 @@ a:hover {
 .buttonSiguiente:hover {
   background-color: #000000;
 }
+.buttonCancelar:hover {
+  background-color: #EB1E23;
+  color: #FFF;
+}
 
 
 /* ---------- ICONS ---------- */
