--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-empresa/sesion-empresa.component.html
@@ -44,6 +44,7 @@
         
         <div>
           <button class="buttonSiguiente" (click)="iniciarSesionPersonaJuridica()" >Ingresar</button>    
+          <button class="buttonCancelar"  (click)="CancelarSesion()">Cancelar</button>
         </div>
   
         <div class="footer">
