--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-persona/sesion-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/sesion-persona/sesion-persona.component.html
@@ -37,7 +37,9 @@
         </div>
         
         <div>
-          <button class="buttonSiguiente" (click)="iniciarSesionPersonaNatural()">Ingresar</button>   
+          <button class="buttonSiguiente" (click)="iniciarSesionPersonaNatural()">Ingresar</button> 
+          <button class="buttonCancelar"  (click)="CancelarSesion()">Cancelar</button>
+  
         </div>
   
         <div class="footer">
