--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.css
@@ -119,6 +119,11 @@ a:hover {
   background-color: #000000;
 }
 
+.buttonCancelar:hover {
+  background-color: #EB1E23;
+  color: #FFF;
+}
+
 
 /* ---------- ICONS ---------- */
 .icons {
