--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
@@ -41,7 +41,10 @@
             </tr>
         </tbody>
     </table>
-</div>
+</div><br>
+<div class="col-md-2">
+  <button class="buttonCancelar"  (click)="CancelarSesion()">Cancelar</button>
+</div> 
 </div>
 
 <!--Editar Usuario-->
