--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-empresa/edicion-perfil-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-empresa/edicion-perfil-empresa.component.css
@@ -343,6 +343,19 @@
     border: 2px solid #ccc;
   }
   
+  .buttonVolver {
+    background-color: #58595B;
+    color: #FFFFFF;
+    margin: 12px 0px 6px 0px;
+    width: 50%;
+    font-size: 12px;
+    text-align: left;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 1px;
+    padding: 5px 7px;
+    border: 2px solid #58595B;
+  }
   
   .buttonPaso {
     background-color: #000000; /* Green */
@@ -360,6 +373,12 @@
   
   .buttonSiguiente:hover {
     background-color: #000000;
+  }
+
+  .buttonVolver:hover {
+    background-color: red;
+    border: 2px solid #EB1E23;
+  
   }
   
 
