--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-persona/edicion-perfil-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-persona/edicion-perfil-persona.component.css
@@ -330,7 +330,6 @@ color: #000;
   border: 2px solid #ccc;
 }
 
-
 .buttonPaso {
   background-color: #000000; /* Green */
   border: none;
@@ -345,8 +344,29 @@ color: #000;
   border-radius: 50%;
 }
 
+.buttonVolver {
+  background-color: #58595B;
+  color: #FFFFFF;
+  margin: 12px 0px 6px 0px;
+  width: 50%;
+  font-size: 12px;
+  text-align: left;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 1px;
+  padding: 5px 7px;
+  border: 2px solid #58595B;
+}
+
+
 .buttonSiguiente:hover {
   background-color: #000000;
+}
+
+.buttonVolver:hover {
+  background-color: red;
+  border: 2px solid #EB1E23;
+
 }
 
 
