--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/administracion-usuario-empresa/administracion-usuario-empresa.component.html
@@ -43,7 +43,7 @@
     </table>
 </div><br>
 <div class="col-md-2">
-  <button class="buttonCancelar"  (click)="CancelarSesion()">Cancelar</button>
+  <button class="buttonCancelar"  (click)="CancelarSesion()">Volver</button>
 </div> 
 </div>
 
