--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-persona/edicion-perfil-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/edicion-perfil-persona/edicion-perfil-persona.component.html
@@ -17,9 +17,9 @@
   </div>
        <div class="personal" *ngIf="isVisiblePerfil">
          <h5>Información personal</h5>
-            <p>DNI</p>
-            <p>Nombres y apellidos</p>
-            <p>Dirección</p>
+            <p>DNI: {{dni}}</p>  
+            <p>Nombres y apellidos: {{nombre_completo}}</p>
+            <p>Dirección: {{direccion}}</p> 
           </div>
 
         <div class="contacto" *ngIf="isVisiblePerfil">
@@ -27,9 +27,10 @@
           <img src="../../assets/img/icono_editar.png" alt="Editar" title="Editar" width="20" (click)="clickEditarContacto()">
         </h5>
          <div *ngIf="isVisibleContacto"> 
-          <p>Celular</p>
-          <p>Correo</p></div>        
-         </div>
+          <p>Celular: {{celular}}</p> 
+          <p>Correo:  {{correo}}</p>
+        </div>
+        </div>
         
         <div *ngIf="isVisibleEditarContacto">
         <div>
