--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/aplicaciones-usuario/aplicaciones-usuario.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/pages/aplicaciones-usuario/aplicaciones-usuario.component.html
@@ -17,7 +17,7 @@
                 <span class="descripcion">{{app.descripcion}}</span>
             </div>
             <div class="box-view">
-              <a [attr.href]="app.url" target="" rel="tooltip"data-placement="bottom" title="Ir a aplicación">
+              <a [attr.href]="app.url" target="_blank" rel="tooltip"data-placement="bottom" title="Ir a aplicación">
                 Ver Aplicación <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
               </a>
             </div>
